Document that StringScanner#matched_size returns size in bytes [ci skip]

Fixes [Bug #17139]